--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805480.md#1">武汉到底有多少人死于新型冠状病毒？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808064.md#1">蜀笑笑：论合法</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806197.md#1">程晓容：香港“天下制裁”集会为何被中止？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805764.md#1">诸葛次郎：为庚子年的香港祈祷</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805741.md#1">谭笑飞：中美协议加速中共解体</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803257.md#1">颜丹：中国“人均GDP过万”为何毫无意义？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802918.md#1">张林：中共魔手把慈善机构变成诈骗团伙</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802382.md#1">王友群：林郑月娥可知你“错”在哪？</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -30,7 +30,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807894.md#1">故宫奔驰女事件发酵 何家揭红三代瞒亲友秘婚</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807894.md#1">“故宫奔驰女”发酵 何家揭红三代瞒亲友秘婚</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806712.md#1">响应香港抗暴 纽约港人“制裁中共”游行</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807788.md#1">孟晚舟引渡案开庭前数小时?中共再喊“放人”</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807770.md#1">武汉肺炎爆发 钟南山确认人传人 习李发话</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,191,520 人
+- 共 350,191,573 人
 ```
 </strong>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
